# k8s-lab

./: .gitignore  .yamllint.yaml  Makefile  README.md  env.sample  pyproject.toml  renovate.json  renovate.yaml  rook-migration.md
.github/workflows/: pull-request.yaml
applications/: applications.yaml  argocd.yaml  awx-operator.yaml  awx.yaml  cert-manager.yaml  changedetection.io.yaml  crossplane-providers.yaml  crossplane.yaml  external-snapshotter.yaml  flatcar-linux-update-operator.yaml  guestbook.yaml  ingress-nginx-controller.yaml  jellyfin.yaml  k8s-gateway.yaml  matchbox.yaml  mealie.yaml  metrics-server.yaml  node-problem-detector.yaml  postgresql-operator.yaml  prometheus-stack.yaml  rook-ceph-cluster.yaml  rook-ceph-csi-drivers.yaml  rook-ceph.yaml  smartctl-exporter.yaml  system-upgrade-controller.yaml  uptime-kuma.yaml  vault.yaml  velero.yaml
argocd/: kustomization.yaml
argocd/patches/: configmap-argocd-notifications.yaml  configmap-argocd.yaml
argocd/resources/: ingress.yaml
awx/: kustomization.yaml
awx/resources/: awx.yaml
cert-manager/: kustomization.yaml
cert-manager/resources/: cluster-issuer.yaml
changedetection.io/: values.yaml
crossplane-providers/base/: kustomization.yaml
external-snapshotter/base/: kustomization.yaml
ingress-nginx-controller/: kustomization.yaml
jellyfin/: README.md
k8s-gateway/: kustomization.yaml
mealie/: kustomization.yaml
prometheus-stack/: README.md  kustomization.yaml
rook-ceph/: README.md  values.yaml
uptime-kuma/: kustomization.yaml
vault/: README.md
velero/: values.yaml
(+33 files in other folders)
