[tool.poetry]
name = "lab"
version = "0.1.0"
description = ""
authors = ["Aaron D Borden <adborden@a14n.net>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
yamllint = "^1.35.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
